--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,36 +7,26 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        
+        # cache: 'npm' # Uncomment if you have package-lock.json in the repo
+
     - name: Install dependencies
-      run: |
-        npm install
-        npm install -g @angular/cli
-        
-    - name: Install Angular Material
-      run: |
-        ng add @angular/material --defaults --skip-confirmation
-        
-    - name: Create missing template files
-      run: |
-        mkdir -p src/app/components/contact src/app/components/education
-        touch src/app/components/contact/contact.component.html
-        touch src/app/components/education/education.component.html
-        
+      run: npm install
+
+    - name: Install Angular CLI
+      run: npm install -g @angular/cli
+
     - name: Build Angular app
-      run: |
-        ng build --configuration production --base-href="/aravind-portfolio/" --verbose
-        
+      run: ng build --configuration production --base-href="/aravind-portfolio/"
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
